# flask-practice

./: .gitignore  main.py  pyproject.toml
docs/: swagger.yml
static/js/: index.js
templates/: index.html
