[tool.poetry]
name = "flask-practice"
version = "0.1.0"
description = ""
authors = ["tk9559 <28010438+tk9559@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
